# sref

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: sref.hpp  type_traits.hpp
